@@ -821,6 +821,7 @@ AT_SETUP([Multiple programs in one file])
 AT_KEYWORDS([listing])
 
 AT_CAPTURE_FILE([prog.lst])
+AT_CAPTURE_FILE([prog2.lst])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
@@ -836,10 +837,6 @@ AT_DATA([prog.cob], [
        PROGRAM-ID. prog-2.
        END PROGRAM prog-2.
 ])
-
-# Do not change $COMPILE to $COMPILE_ONLY. This tests whether codegen
-# affects the listing.
-AT_CHECK([$COMPILE -t prog.lst prog.cob], [0], [], [])
 
 AT_DATA([prog20.lst],
 [GnuCOBOL V.R.P          prog.cob             DDD MMM dd HH:MM:SS YYYY  Page 0001
@@ -876,8 +873,80 @@ SIZE  TYPE           LVL  NAME                           PICTURE
 0 errors in compilation group
 ])
 
+# Check once with $COMPILE and once with $COMPILE_ONLY.
+# This tests whether codegen affects the listing.
+AT_CHECK([$COMPILE -t prog.lst prog.cob], [0], [], [])
 AT_CHECK([$UNIFY_LISTING prog.lst prog.lis], [0], [], [])
 AT_CHECK([diff prog20.lst prog.lis], [0], [], [])
+AT_CHECK([$COMPILE_ONLY -t prog2.lst prog.cob], [0], [], [])
+AT_CHECK([$UNIFY_LISTING prog2.lst prog.lis], [0], [], [])
+AT_CHECK([diff prog20.lst prog.lis], [0], [], [])
+AT_CHECK([rm -f prog.lst prog2.lst], [0], [], [])
+
+AT_DATA([progb.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog-1.
+
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  blah PIC x.
+
+       PROCEDURE DIVISION.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog-2.
+       PROCEDURE DIVISION.
+       END PROGRAM prog-2.
+
+       END PROGRAM prog-1.
+])
+
+AT_DATA([prog20b.lst],
+[GnuCOBOL V.R.P          progb.cob            DDD MMM dd HH:MM:SS YYYY  Page 0001
+
+LINE    PG/LN  A...B............................................................
+
+000001
+000002         IDENTIFICATION DIVISION.
+000003         PROGRAM-ID. prog-1.
+000004
+000005         DATA DIVISION.
+000006         WORKING-STORAGE SECTION.
+000007         01  blah PIC x.
+000008
+000009         PROCEDURE DIVISION.
+000010
+000011         IDENTIFICATION DIVISION.
+000012         PROGRAM-ID. prog-2.
+000013         PROCEDURE DIVISION.
+000014         END PROGRAM prog-2.
+000015
+000016         END PROGRAM prog-1.
+GnuCOBOL V.R.P          progb.cob            DDD MMM dd HH:MM:SS YYYY  Page 0002
+
+SIZE  TYPE           LVL  NAME                           PICTURE
+
+      PROGRAM             prog-1
+
+00001 ALPHANUMERIC   01   blah                           X
+
+      PROGRAM             prog-2
+
+      No fields defined.
+
+
+0 warnings in compilation group
+0 errors in compilation group
+])
+
+# Check once with $COMPILE and once with $COMPILE_ONLY.
+# This tests whether codegen affects the listing.
+AT_CHECK([$COMPILE -t prog.lst progb.cob], [0], [], [])
+AT_CHECK([$UNIFY_LISTING prog.lst prog.lis], [0], [], [])
+AT_CHECK([diff prog20b.lst prog.lis], [0], [], [])
+AT_CHECK([$COMPILE_ONLY -t prog2.lst progb.cob], [0], [], [])
+AT_CHECK([$UNIFY_LISTING prog2.lst prog.lis], [0], [], [])
+AT_CHECK([diff prog20b.lst prog.lis], [0], [], [])
 
 AT_CLEANUP
 
