@@ -2,6 +2,8 @@
 2017-06-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c: prevent memory leak when options are specified multiple times
+	* cobc.c (print_program_trailer): correct program order in listing
+	  for both with/without code generation
 
 2017-06-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
